# lecture2

./: README.md  lecture2.cabal
src/: Expressions.hs  Functions.hs
