name:                lecture2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cs256/lecture2#readme
author:              Michael B. Gale
maintainer:          m.gale@warwick.ac.uk
copyright:           2017 Michael B. Gale
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Expressions, Functions
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cs256/lecture2
